--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "mongoose": "^5.1.7",
     "neo-api": "^1.0.3",
-    "mongoose": "^5.1.7"
+    "request": "^2.87.0",
+    "request-promise-native": "^1.0.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
